[gd_scene load_steps=5 format=3 uid="uid://bj65424k018c7"]

[ext_resource type="Script" path="res://scenes/test_scenes/interpreter_test_level.gd" id="1_gsl3a"]
[ext_resource type="PackedScene" uid="uid://dl3mqmtt4hpof" path="res://scenes/code_window/code_window.tscn" id="2_7rsla"]
[ext_resource type="PackedScene" uid="uid://bxeid64nke54h" path="res://scenes/farm/farm.tscn" id="3_yck3t"]
[ext_resource type="Script" path="res://scripts/interpreter/client.gd" id="4_dfycg"]

[node name="InterpreterTestLevel" type="Node2D"]
script = ExtResource("1_gsl3a")

[node name="Window" parent="." instance=ExtResource("2_7rsla")]
position = Vector2i(35, 91)
size = Vector2i(535, 440)
content_scale_mode = 2
default_text = "var b: int
b = 0
for x in [0,1,2,3,4,5,6]:
	plant(0)
	move(x%2 +1)
	"

[node name="Farm" parent="." instance=ExtResource("3_yck3t")]
position = Vector2(723, 169)
scale = Vector2(2, 2)

[node name="InterpreterClient" type="Node" parent="."]
script = ExtResource("4_dfycg")

[connection signal="kill_button_pressed" from="Window" to="." method="_on_window_kill_button_pressed"]
[connection signal="pause_button_pressed" from="Window" to="." method="_on_window_pause_button_pressed"]
[connection signal="run_button_pressed" from="Window" to="." method="_on_window_run_button_pressed"]
[connection signal="error" from="InterpreterClient" to="." method="_on_interpreter_client_error"]
[connection signal="finished" from="InterpreterClient" to="." method="_on_interpreter_client_finished"]
[connection signal="harvest_requested" from="InterpreterClient" to="." method="_on_harvest_call"]
[connection signal="move_requested" from="InterpreterClient" to="." method="_on_move_call"]
[connection signal="plant_requested" from="InterpreterClient" to="." method="_on_plant_call"]
[connection signal="print_requested" from="InterpreterClient" to="." method="_on_print_call"]
[connection signal="tracepoint_reached" from="InterpreterClient" to="." method="_on_tracepoint_reached"]
